{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 248,
  "lineage": "e2d7adea-326f-e76a-18ed-d3ebc0784460",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "firewallpolicy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/firewallPolicies/firewallpolicy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "northeurope",
            "name": "firewallpolicy",
            "private_ip_ranges": [],
            "resource_group_name": "app-grp",
            "rule_collection_groups": [
              "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/firewallPolicies/firewallpolicy/ruleCollectionGroups/rulecollection"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "rulecollection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "apprulecollection",
                "priority": 600,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "www.microsoft.com"
                    ],
                    "destination_urls": [],
                    "name": "AllowMicrosoft",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.0.0.6"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/firewallPolicies/firewallpolicy",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/firewallPolicies/firewallpolicy/ruleCollectionGroups/rulecollection",
            "name": "rulecollection",
            "nat_rule_collection": [
              {
                "action": "Dnat",
                "name": "nat_rule_collection1",
                "priority": 300,
                "rule": [
                  {
                    "destination_address": "98.71.64.140",
                    "destination_ports": [
                      "4000"
                    ],
                    "name": "AllowRDP",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "0.0.0.0/0"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "10.0.0.6",
                    "translated_fqdn": "",
                    "translated_port": 3389
                  }
                ]
              }
            ],
            "network_rule_collection": [],
            "priority": 500,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.firewallpolicy",
            "azurerm_network_interface.appinterface",
            "azurerm_public_ip.firewallip",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "appinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/app-interface",
            "internal_domain_name_suffix": "3veb2hs1xwxexhnyze12u4xvoc.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA"
              }
            ],
            "location": "northeurope",
            "name": "app-interface",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "app-grp"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "northeurope",
            "name": "app-nsg",
            "resource_group_name": "app-grp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewallip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/firewall-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "98.71.64.140",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "firewall-ip",
            "resource_group_name": "app-grp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "firewallroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/routeTables/firewall-route-table/routes/acceptanceTestRoute1",
            "name": "acceptanceTestRoute1",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "app-grp",
            "route_table_name": "firewall-route-table",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.appfirewall",
            "azurerm_firewall_policy.firewallpolicy",
            "azurerm_public_ip.firewallip",
            "azurerm_route_table.firewallroutetable",
            "azurerm_subnet.firewallsubnet",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "firewallroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/routeTables/firewall-route-table",
            "location": "northeurope",
            "name": "firewall-route-table",
            "resource_group_name": "app-grp",
            "route": [],
            "subnets": [
              "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewallsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "app-network"
          },
          "dependencies": [
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA",
            "name": "SubnetA",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "app-network"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "appnsg-link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA",
            "network_security_group_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA"
          },
          "dependencies": [
            "azurerm_network_security_group.appnsg",
            "azurerm_resource_group.appgrp",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "subnetassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA",
            "route_table_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/routeTables/firewall-route-table",
            "subnet_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA"
          },
          "dependencies": [
            "azurerm_resource_group.appgrp",
            "azurerm_route_table.firewallroutetable",
            "azurerm_subnet.subnetA",
            "azurerm_virtual_network.appnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "appnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1e1e48ed-bd5b-4bae-9db8-c937ca7af572",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network",
            "location": "northeurope",
            "name": "app-network",
            "resource_group_name": "app-grp",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/SubnetA",
                "name": "SubnetA",
                "security_group": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.appgrp"
          ]
        }
      ]
    }
  ]
}